--- a/GreenCharger/src/app/core/components/footer/footer.component.html
+++ b/GreenCharger/src/app/core/components/footer/footer.component.html
@@ -41,15 +41,15 @@
           </div>
           <div class="contact-item">
             <i class="contact-icon">📞</i>
-            <span>0968 736 913</span>
+            <span>0983 237 951</span>
           </div>
           <div class="contact-item">
             <i class="contact-icon">✉️</i>
-            <span>greencharger&#64;gmail.com</span>
+            <span>greenchargervn&#64;gmail.com</span>
           </div>
           <div class="contact-item">
             <i class="contact-icon">🕒</i>
-            <span>8:00 - 17:00, Thứ 2 - Thứ 7</span>
+            <span>8:00-17:00, Thứ 2-Thứ 7</span>
           </div>
         </div>
       </div>
@@ -69,7 +69,7 @@
               required
             />
             <button type="submit" class="newsletter-btn">
-              <i class="newsletter-icon">✈️</i>
+              SEND
             </button>
           </div>
         </form>
@@ -80,7 +80,7 @@
     <div class="footer-bottom">
       <div class="footer-bottom-content">
         <div class="copyright">
-          <p>&copy; 2025 GREEN CHARGER. Phát triển bởi PARK.</p>
+          <p>&copy; 2025 GREEN CHARGER.</p>
         </div>
         <div class="footer-bottom-links">
           <a routerLink="/privacy" class="footer-bottom-link">Chính sách bảo mật</a>
